[tool.poetry]
name = "crawley"
version = "0.1.0"
description = ""
authors = ["Gabriel Lobo <gabrielolobo42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
bs4 = "^0.0.1"
pytest = "^7.3.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
